# Spimbot

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
docs/: Amethyst-MIT  Spim-BSD
src/config/: config.h
src/controllers/mips/: config.h  cpu.h  cpu_data.cpp  cpu_inst.cpp  cpu_mem.cpp  cpu_run.cpp  cpu_sym.cpp  cpu_syscall.cpp  inst.cpp  inst.h  mem.cpp  mem.h  mips_controller.h  reg.h  spim.h  sym-tbl.cpp  sym-tbl.h  syscall.h  version.h
src/parser/: parser_helpers.h  skipper.h
src/parser/directive/: ast.h  directive.h  symbols.h
src/parser/expression/: ast.h  expression.h  expression_lst.h
src/parser/instruction/: asm_code.h  ast.h  dump_ops.cpp  inst.cpp  inst.h  instruction.h  op.h  symbols.h
src/parser/primitives/: atomics.h  comment.h  directive.h  directive_ast.h  directive_symbols.h  instruction.h  keywords.h  register.h
tests/: CMakeLists.txt  test_turn.cpp
tests/test_parser/: table.h  test_parser.h
tests/test_parser/test_primitives/: test_comment.cpp  test_directives.cpp  test_expression.cpp  test_quotes.cpp  test_register.cpp  test_statements.cpp
